force-app/main/default/objects/Apttus__WizardStepRuntime__c/Apttus__WizardStepRuntime__c.object-meta.xml
<CustomObject>
    <description>A runtime instance of a wizard step design.</description>
    <label>Wizard Step Runtime (Deprecated)</label>
    <nameField>
        <label>Wizard Step Runtime Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wizard Step Runtime</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>