force-app/main/default/objects/Apttus__WizardStepRuntime__c/fields/Apttus__NextPage__c.field-meta.xml
<CustomField>
    <fullName>Apttus__NextPage__c</fullName>
    <description>Identifies the next page if its not a Wizard Step (URL, SUBMIT, ACKNOWLEDGEMENT)</description>
    <inlineHelpText>Identifies the next page if its not a Wizard Step (URL, SUBMIT, ACKNOWLEDGEMENT)</inlineHelpText>
    <label>Next Page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>