force-app/main/default/objects/Apttus__WizardStepRuntime__c/fields/Apttus__NextWizardRuntimeId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__NextWizardRuntimeId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Not supported yet. Identifies the next wizard runtime during navigation</description>
    <inlineHelpText>Not supported yet. Identifies the next wizard runtime during navigation</inlineHelpText>
    <label>Next Wizard Runtime</label>
    <referenceTo>Apttus__WizardRuntime__c</referenceTo>
    <relationshipName>WizardStepRuntime2</relationshipName>
    <type>Lookup</type>
</CustomField>