force-app/main/default/objects/Apttus__WizardStepRuntime__c/fields/Apttus__NextWizardStepRuntimeId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__NextWizardStepRuntimeId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look up to wizard step runtime</description>
    <inlineHelpText>Look up to wizard step runtime</inlineHelpText>
    <label>Next Wizard Step Runtime</label>
    <referenceTo>Apttus__WizardStepRuntime__c</referenceTo>
    <relationshipName>WizardStepRuntime1</relationshipName>
    <type>Lookup</type>
</CustomField>