force-app/main/default/objects/Apttus__WizardStepRuntime__c/fields/Apttus__WizardRuntimeId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__WizardRuntimeId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference/Lookup to wizard runtime this step belongs to</description>
    <inlineHelpText>Reference/Lookup to wizard runtime this step belongs to</inlineHelpText>
    <label>Wizard Runtime</label>
    <referenceTo>Apttus__WizardRuntime__c</referenceTo>
    <relationshipName>WizardStepRuntime3</relationshipName>
    <type>Lookup</type>
</CustomField>