force-app/main/default/objects/Apttus__WizardStepRuntime__c/fields/Apttus__WizardStepId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__WizardStepId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference/Lookup to Wizard Step design from which this runtime step is instantiated</description>
    <inlineHelpText>Reference/Lookup to Wizard Step design from which this runtime step is instantiated</inlineHelpText>
    <label>Wizard Step</label>
    <referenceTo>Apttus__WizardStep__c</referenceTo>
    <relationshipName>WizardStepRuntime</relationshipName>
    <type>Lookup</type>
</CustomField>